--- a/02_PA_Machine Learning Introduction.ipynb
+++ b/02_PA_Machine Learning Introduction.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Practical Data Science 19/20*\n",
+    "*Practical Data Science 21/22*\n",
     "# Programming Assignment 2 - Predicting Video Game Sales"
    ]
   },
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,135 +37,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Platform</th>\n",
-       "      <th>Year_of_Release</th>\n",
-       "      <th>Genre</th>\n",
-       "      <th>Global_Sales</th>\n",
-       "      <th>Critic_Score</th>\n",
-       "      <th>Critic_Count</th>\n",
-       "      <th>User_Score</th>\n",
-       "      <th>User_Count</th>\n",
-       "      <th>Rating</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Wii Sports</td>\n",
-       "      <td>Wii</td>\n",
-       "      <td>2006.0</td>\n",
-       "      <td>Sports</td>\n",
-       "      <td>82.53</td>\n",
-       "      <td>76.0</td>\n",
-       "      <td>51.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>322.0</td>\n",
-       "      <td>E</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Super Mario Bros.</td>\n",
-       "      <td>NES</td>\n",
-       "      <td>1985.0</td>\n",
-       "      <td>Platform</td>\n",
-       "      <td>40.24</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Mario Kart Wii</td>\n",
-       "      <td>Wii</td>\n",
-       "      <td>2008.0</td>\n",
-       "      <td>Racing</td>\n",
-       "      <td>35.52</td>\n",
-       "      <td>82.0</td>\n",
-       "      <td>73.0</td>\n",
-       "      <td>8.3</td>\n",
-       "      <td>709.0</td>\n",
-       "      <td>E</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Wii Sports Resort</td>\n",
-       "      <td>Wii</td>\n",
-       "      <td>2009.0</td>\n",
-       "      <td>Sports</td>\n",
-       "      <td>32.77</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>73.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>192.0</td>\n",
-       "      <td>E</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Pokemon Red/Pokemon Blue</td>\n",
-       "      <td>GB</td>\n",
-       "      <td>1996.0</td>\n",
-       "      <td>Role-Playing</td>\n",
-       "      <td>31.37</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                       Name Platform  Year_of_Release         Genre  \\\n",
-       "0                Wii Sports      Wii           2006.0        Sports   \n",
-       "1         Super Mario Bros.      NES           1985.0      Platform   \n",
-       "2            Mario Kart Wii      Wii           2008.0        Racing   \n",
-       "3         Wii Sports Resort      Wii           2009.0        Sports   \n",
-       "4  Pokemon Red/Pokemon Blue       GB           1996.0  Role-Playing   \n",
-       "\n",
-       "   Global_Sales  Critic_Score  Critic_Count  User_Score  User_Count Rating  \n",
-       "0         82.53          76.0          51.0         8.0       322.0      E  \n",
-       "1         40.24           NaN           NaN         NaN         NaN    NaN  \n",
-       "2         35.52          82.0          73.0         8.3       709.0      E  \n",
-       "3         32.77          80.0          73.0         8.0       192.0      E  \n",
-       "4         31.37           NaN           NaN         NaN         NaN    NaN  "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data_path = 'https://github.com/pds2021/course/raw/main/assignments/Data/02/video_game_sales.csv'\n",
+    "data_path = 'https://raw.githubusercontent.com/NikoStein/pds_data/main/data/video_game_sales.csv'\n",
     "game_sales_data = pd.read_csv(data_path)\n",
     "game_sales_data.head()"
    ]
@@ -181,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +126,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write your code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Improve the Model\n",
+    "\n",
+    "Having successfully trained a model, your next task is to improve its performance. Try different advanced feature engineering techniques and see if they are able to improve your model.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
